# TaskManagerBackend

./: .dockerignore  .gitignore  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  main.py  models.py  storage.py  task_routes.py  utils.py
data/: tasks.json  users.json
docs/: task_manager_backend.md  task_manager_backend_raw.md
nginx/: default.conf
static/: index.html  main.js
