[project]
name = "taskmanagerbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "jose>=1.0.0",
    "pydantic>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.35.0",
]
